tests/snapshots/regression/nested__nested_lambdas_precedence.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/nested/nested_lambdas_precedence.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 3 errors • tests/fixtures/nested/nested_lambdas_precedence.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/nested/nested_lambdas_precedence.flx:2:1
  |
2 | print(f(1)(2));
  | ^^^^^^^^^^^^^^^
  | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/nested/nested_lambdas_precedence.flx:2:1
  |
2 | print(f(1)(2));
  | ^^^^^^^^^^^^^^^
  | --------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Console` but the enclosing context does not provide it

  tests/fixtures/nested/nested_lambdas_precedence.flx:2:1
  |
2 | print(f(1)(2));
  | ^^^^^^^^^^^^^^
  | -------------- requires `Console`

Hint:
  annotate the enclosing function with `with Console`

Found 3 errors.
